--- a/DLC/DLC.vcxproj.filters
+++ b/DLC/DLC.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="md5collgen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="crc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sha1.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="md5collgen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="crc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
