--- a/DLC/DLC.vcxproj
+++ b/DLC/DLC.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="aes.cpp" />
     <ClCompile Include="base64.cpp" />
+    <ClCompile Include="crc.cpp" />
     <ClCompile Include="DLC.cpp" />
     <ClCompile Include="md5.cpp" />
     <ClCompile Include="md5collgen.cpp" />
@@ -138,6 +139,7 @@
   <ItemGroup>
     <ClInclude Include="aes.h" />
     <ClInclude Include="base64.h" />
+    <ClInclude Include="crc.h" />
     <ClInclude Include="md5.h" />
     <ClInclude Include="md5collgen.h" />
     <ClInclude Include="sha1.h" />
