--- a/DLC/DLC.vcxproj
+++ b/DLC/DLC.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="base64.cpp" />
     <ClCompile Include="crc.cpp" />
     <ClCompile Include="DLC.cpp" />
+    <ClCompile Include="LengthExtensionAttack.cpp" />
     <ClCompile Include="md5.cpp" />
     <ClCompile Include="md5collgen.cpp" />
     <ClCompile Include="sha1.cpp" />
@@ -140,6 +141,7 @@
     <ClInclude Include="aes.h" />
     <ClInclude Include="base64.h" />
     <ClInclude Include="crc.h" />
+    <ClInclude Include="LengthExtensionAttack.h" />
     <ClInclude Include="md5.h" />
     <ClInclude Include="md5collgen.h" />
     <ClInclude Include="sha1.h" />
